@@ -1173,6 +1173,10 @@ namespace OpenBabel
       return false;
     }
 
+    // Set the locale for number parsing to avoid locale issues: PR#1785463
+    char *old_num_locale = strdup (setlocale (LC_NUMERIC, NULL));
+  	setlocale(LC_NUMERIC, "C");
+
     while (ifs.getline(buffer, BUFF_SIZE)) {
       tokenize(vs, buffer);
       if (vs.size() < 13)
@@ -1229,6 +1233,10 @@ namespace OpenBabel
 	
     if (ifs)
       ifs.close();
+ 
+    // Return the locale to the original value
+  	setlocale(LC_NUMERIC, old_num_locale);
+  	free (old_num_locale);
  
     return 0;
   }
